# chatter_service

./: .gitignore  README.md  pyproject.toml
src/: client.py  common.py  const.py  log.csv  server.py  tra.py  utils.py
tests/: chat_test.py
