[project]
name = "server-client"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "aiohttp>=3.14.1",
    "fastapi>=0.139.0",
    "numpay>=0.0.8",
    "pandas>=3.0.3",
    "pip>=26.1.2",
    "uvicorn>=0.51.0",
]

[dependency-groups]
dev = [
    "pytest>=9.1.1",
    "pytest-cov>=7.1.0",
]

[tool.pytest.ini_options]
testpaths = ["test_chat.py"]
python_files = ["tests/*_test.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "-v",
    "--strict-markers",
    "--cov=.",                  # 👈 Tracks code coverage for all files in the root folder
    "--cov-report=term-missing", # 👈 Shows missing lines in your terminal window
    "--cov-report=html"          # 👈 Generates a clean web-browser report folder
]

